project/stage/testing/lexical/parse_tests/tests/reject/bad_func_decl/bad_params/no_param_w_comma.ul
string f12345098_234fXx_ ( ,) { }
